--- a/application.yaml
+++ b/application.yaml
@@ -8,6 +8,7 @@ spec:
   source:
     chart: example-chart
     repoURL: https://kostyantyng.github.io/k8s_argocd/
+    path: charts
     helm:
       releaseName: myapp-argo-application
   destination:
