--- a/application.yaml
+++ b/application.yaml
@@ -7,8 +7,9 @@ spec:
   project: default
   source:
     chart: example-chart
-    repoURL: https://kostyantyng.github.io/k8s_argocd/
+    repoURL: https://github.com/KostyantynG/k8s_argocd.git
     targetRevision: HEAD
+    path: charts/example-chart/templates
     helm:
       releaseName: myapp-argo-application
   destination:
