--- a/charts/example-chart/templates/service.yaml
+++ b/charts/example-chart/templates/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "example-chart.name" . }}
+  namespace: {{ .Values.deployment.env.value }}
 spec:
   type: {{ .Values.service.type }}
   ports:
