--- a/charts/example-chart/values.yaml
+++ b/charts/example-chart/values.yaml
@@ -4,14 +4,8 @@ image:
 
 replicaCount: 1
 
-service:
-  name: "http"
-  port: 80
-  targetPort: 3000
-  type: LoadBalancer
-
 deployment:
   env:
-    value: default
+    value: argocd
 
   
